[package]
name = "cluLamansh"
version = "0.1.3"
authors = ["Денис Котляров <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/cluLamansh.git"
license = "Apache-2.0"
readme = "README.md"

description = "A binary record of the values stored in the array using the Lamansh protocol."
keywords = ["cluLamansh", "lamansh", "lamash-protocol", "protocol", "clucompany"]
categories = ["development-tools"]

[lib]
name = "cluLamansh"
path = "src/lib.rs"
crate-type = ["dylib", "rlib"]


[dependencies]
byteorder = "1.2.3"
